--- a/index.html
+++ b/index.html
@@ -222,35 +222,72 @@
             z-index: 2;
         }
 
+        /* Updated Profile Avatar Styles for Image */
         .profile-avatar {
             width: 200px;
             height: 200px;
             border-radius: 50%;
-            background: linear-gradient(135deg, var(--primary-color), var(--accent-color));
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 4rem;
-            color: white;
             margin: 0 auto 1rem;
             position: relative;
             overflow: hidden;
+            background: linear-gradient(135deg, var(--primary-color), var(--accent-color));
+            padding: 4px; /* Creates border effect */
+            box-shadow: 0 12px 40px rgba(37, 99, 235, 0.3);
+            transition: transform 0.3s ease;
         }
 
-        .profile-avatar::before {
-            content: '';
+        .profile-avatar:hover {
+            transform: scale(1.05);
+        }
+
+        .profile-image {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
+            object-position: center;
+            transition: transform 0.3s ease;
+            border: 3px solid white;
+        }
+
+        /* Enhanced shimmer effect overlay */
+        .avatar-overlay {
             position: absolute;
             top: 0;
             left: 0;
             right: 0;
             bottom: 0;
             background: linear-gradient(45deg, transparent, rgba(255,255,255,0.2), transparent);
-            animation: shimmer 2s infinite;
+            animation: shimmer 3s infinite;
+            pointer-events: none;
+            border-radius: 50%;
         }
 
         @keyframes shimmer {
-            0% { transform: translateX(-100%); }
-            100% { transform: translateX(100%); }
+            0% { 
+                transform: translateX(-100%) rotate(45deg); 
+                opacity: 0;
+            }
+            50% { 
+                opacity: 1;
+            }
+            100% { 
+                transform: translateX(100%) rotate(45deg); 
+                opacity: 0;
+            }
+        }
+
+        /* Fallback emoji styles (if image fails to load) */
+        .profile-emoji {
+            font-size: 4rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 100%;
+            color: white;
+            background: linear-gradient(135deg, var(--primary-color), var(--accent-color));
+            border-radius: 50%;
         }
 
         .profile-info h3 {
@@ -839,6 +876,11 @@
             .education-details {
                 grid-template-columns: 1fr;
             }
+
+            .profile-avatar {
+                width: 150px;
+                height: 150px;
+            }
         }
 
         /* Animations */
@@ -927,7 +969,15 @@
 
                 <div class="hero-image slide-in-right">
                     <div class="profile-card">
-                        <div class="profile-avatar">👨‍💻</div>
+                        <!-- Updated Profile Avatar with Image Support -->
+                        <div class="profile-avatar">
+                            <!-- Replace "assets/profile-photo.jpg" with your actual image path -->
+                            <img src="assets/profile-photo.jpg" alt="Amarender Kasturi" class="profile-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                            <!-- Fallback emoji (shown if image fails to load) -->
+                            <div class="profile-emoji" style="display: none;">👨‍💻</div>
+                            <!-- Shimmer overlay effect -->
+                            <div class="avatar-overlay"></div>
+                        </div>
                         <div class="profile-info">
                             <h3>Amarender Kasturi</h3>
                             <p>CS Student at SR University</p>
