--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                         <!-- Updated Profile Avatar with Image Support -->
                         <div class="profile-avatar">
                             <!-- Replace "assets/profile-photo.jpg" with your actual image path -->
-                            <img src="assets/profile-photo.jpg" alt="Amarender Kasturi" class="profile-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                            <img src="profile-photo.jpg" alt="Amarender Kasturi" class="profile-image" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                             <!-- Fallback emoji (shown if image fails to load) -->
                             <div class="profile-emoji" style="display: none;">👨‍💻</div>
                             <!-- Shimmer overlay effect -->
@@ -1520,3 +1520,4 @@
     </script>
 </body>
 </html>
+
